# ruleset-data-schema

./: 404.html  README.md  dodo.py  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-test.yaml  build_web.yaml
about/: index.html  index.xml
assets/examples/: ashrae-90_1-ecb-2019.cbor  ashrae-90_1-ecb-2019.json  ashrae-90_1-ecb-2019.yaml  title-24-2019.cbor  title-24-2019.json
assets/schema/: BuildingPerformanceRuleset.schema.json
categories/: index.html  index.xml
docs/: BuildingPerformanceRuleset.md.j2
docs/web/: about.md  config.yaml  landing.md
examples/: index.html  index.xml  title-24-2019.yaml
js/: main.min.608249024260ba88fb1a3c53b892b7095c395120d95e84ac96c2dc6379863a9d.js
schema/: BuildingPerformanceRuleset.schema.yaml  index.html  index.xml
scripts/: get_constructions.py  make_examples.py
scripts/source-data/ashrae-90_1-ecb-2019/: climate-zones.yaml  enumerations.yaml  opaque-envelope.csv
scripts/source-data/title-24-2019/: climate-zones.yaml  enumerations.yaml  opaque-envelope.csv
specifications/: index.html  index.xml
specifications/buildingperformanceruleset/: index.html
tags/: index.html  index.xml
